add reset password

--- a/src/templates/reset-password-email.hbs
+++ b/src/templates/reset-password-email.hbs
@@ -20,6 +20,17 @@
     </a>
   </div>
 
+  <p style='font-size: 16px; color: #333;'>
+    If clicking the button does not take you to the page, use this link:
+    <br />
+    <a
+      style='font-size: 14px;'
+      href='{{link}}'
+      target='_blank'
+      rel='noopener noreferrer'
+    >{{link}}</a>
+  </p>
+
   <p style='font-size: 14px; color: #666;'>
     If you didn’t request this, you can ignore this email.
   </p>
@@ -27,6 +38,6 @@
   <hr style='margin: 20px 0; border: none; border-top: 1px solid #ccc;' />
 
   <p style='font-size: 12px; color: #999;'>
-    This link will expire in 15 minutes for security reasons.
+    This link will expire in 10 minutes for security reasons.
   </p>
 </div>
